# markwritter

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile.api  Dockerfile.web  README.md  TODOS.md  config.yaml  docker-compose.yml  npx  pyproject.toml
.cursor/: mcp.json
.github/workflows/: ci.yml
api/: __init__.py  main.py
api/routers/: chat.py  skills.py
api/services/: framework_bridge.py
codex/: 00-summary.md  01-wire-chat-endpoint.md  02-integrate-llm-generate.md  03-update-chat-request.md  04-stream-llm-sse.md  05-citation-frontend.md  06-source-selection-frontend.md  README.md
docs/: CODEMAP.md  INDEX.md  OVERVIEW.md  PHASE0-PROGRESS.md  figma-design-spec.md  figma-implementation-guide.md  figma-mcp-handoff.md  figma-wireframes.md  frontend-refactor-plan.md  frontend-rewrite-plan.md  phase-0-status.md  ui-prototype.html
docs/design-system/: HANDOFF.md  components-button-badge.md  components-feedback-utility.md  components-form-inputs.md  components-surface-overlay.md  layout-shell.md  page-chat.md  page-explore.md  page-record-query-skills.md  page-settings.md  tokens.md
docs/plans/: 2026-03-19-logging-implementation.md  2026-03-19-logging-system-design.md  2026-03-21-gui-implementation.md  2026-03-25-backend-refactor-plan.md  2026-03-27-ui-verification-report.md  2026-04-04-frontend-implementation-plan.md  2026-04-07-apple-refresh-foundations.md  2026-04-07-apple-refresh-screen-alignment.md  chat-redesign-prototype.html  wrt-005-v1-implementation.md
markwritter/: __init__.py  cli.py  config.py  core.py  exceptions.py  executor.py  llm_client.py  logger.py  model_router.py  models.py  parser.py  provider_registry.py  registry.py
markwritter/agent/: __init__.py  agent_loop.py  chat_graph.py  flow.py  provider.py  scope.py  subagent.py  tool_executor.py  tools.py
markwritter/api/: __init__.py  app.py
markwritter/explore/: __init__.py  graph.py
markwritter/memory/: __init__.py  config.py  service.py
markwritter/obsidian/: __init__.py  models.py  parser.py  vault.py
markwritter/query/: __init__.py  models.py  search.py
markwritter/record/: __init__.py  assistant.py
markwritter/storage/: __init__.py  base.py  cache.py  chat_db.py  ingestion.py  models.py  path_resolver.py  rag_tool.py  registry.py  service.py  watcher.py
note/: framework-design.md  gui-implementation-plan.md  litellm-integration-plan.md  openclaw-analysis.md
skills/hello/: run.py  skill.yaml
tests/: test_agent_flow.py  test_agent_provider.py  test_agent_scope.py  test_agent_subagent.py  test_api_app.py  test_api_main.py  test_auto_classifier.py  test_chat_api.py  test_exceptions.py  test_explore_api.py  test_framework.py  test_framework_bridge.py  test_knowledge_graph.py  test_llm_client.py  test_logger.py  test_logs_api.py  test_memory_service.py  test_model_info.py  test_model_router.py  test_obsidian.py  test_phase2_restful_api.py  test_provider_config.py  test_provider_registry.py  test_query_api.py  test_query_keyword.py  test_query_models.py  test_query_qa.py  test_query_semantic.py  test_record_api.py  test_skills_api.py  test_writing_assistant.py
tests/agent/: test_chat_graph.py
tests/api/: __init__.py  test_content_integration.py  test_content_models.py  test_content_route.py  test_notes_tree_api.py  test_settings_api.py
tests/e2e/: __init__.py  test_llm_multi_provider.py  test_llm_multi_provider_extended.py
tests/integration/: __init__.py  test_query_flow.py  test_record_flow.py
tests/storage/: test_base.py  test_cache.py  test_chat_db.py  test_database_backend.py  test_ingestion.py  test_models.py  test_obsidian_adapter.py  test_path_resolver.py  test_rag_tool.py  test_registry.py  test_service.py  test_watcher.py
web/: .gitignore  Dockerfile.api  Dockerfile.web  README.md  biome.json  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.json  vite.config.ts  vitest.config.ts
web/app/: globals.css  layout.tsx  (+1 more)
(+312 files in other folders)
