[project]
name = "markwritter"
version = "0.1.0"
description = "AI-native knowledge management tool - Obsidian + memU + AI Agent"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "litellm>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-frontmatter>=1.0.0",
    "watchdog>=3.0.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "httpx>=0.24.0",
]

[project.scripts]
markwritter = "markwritter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["markwritter"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long - handled by black formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "F841"]  # Allow long lines and unused variables in tests
"**/assistant.py" = ["E501"]  # Allow long lines in prompt strings

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
